--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -3,7 +3,7 @@
 // ========================================================================== //
 
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;500;700&family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400&family=Karla:wght@300;500;700&family=Poppins:wght@300;400;500&display=swap');
 
 // Partials
 @import 'partials/animations';
@@ -26,7 +26,7 @@
 // Layers
 @layer base {
     * {
-        @apply font-text font-light;
+        @apply font-karla font-light;
     }
 
     section {
@@ -39,7 +39,7 @@
     }
 
     nav {
-        @apply font-display font-medium;
+        @apply font-poppins font-medium;
     }
 
     h1,
@@ -49,7 +49,7 @@
     h5,
     h6,
     p {
-        @apply mb-2;
+        @apply mb-3;
     }
 
     h1,
@@ -58,11 +58,11 @@
     h4,
     h5,
     h6 {
-        @apply font-display;
+        @apply font-poppins;
     }
 
     h1 {
-        @apply relative inline-block pb-1 font-medium uppercase leading-6 text-blue-light sm-max:text-28 md:text-36;
+        @apply relative inline-block pb-1 font-medium uppercase text-blue-light sm-max:text-28 sm-max:leading-tight md:text-36;
 
         &::after {
             @apply bg-green-light;
@@ -128,18 +128,18 @@
 
     ul,
     ol {
-        @apply mb-2 px-3;
+        @apply mb-3 px-3;
 
         & + p {
-            @apply mt-2;
+            @apply mt-3;
         }
 
         ul {
-            @apply list-circle mb-0 mt-2;
+            @apply list-circle mb-0 mt-3;
         }
 
         li {
-            @apply mb-2;
+            @apply mb-3;
 
             &:last-of-type {
                 @apply mb-0;
@@ -194,6 +194,10 @@
     select {
         @apply pr-4;
     }
+
+    hr {
+        @apply mb-3 border-b-[1px] border-t-2 border-green-light;
+    }
 }
 
 // Components
@@ -220,15 +224,7 @@
             @apply border-blue-light bg-blue-light text-white;
 
             &:hover {
-                @apply lg:border-blue-light lg:bg-blue;
-            }
-
-            &-outline {
-                @apply border-blue-light text-blue-light;
-
-                &:hover {
-                    @apply lg:border-blue-light lg:bg-blue-light lg:text-white;
-                }
+                @apply lg:border-blue-light lg:bg-blue-lighter;
             }
         }
 
@@ -236,15 +232,7 @@
             @apply border-green-light bg-green-light text-white;
 
             &:hover {
-                @apply lg:border-green-light lg:bg-green;
-            }
-
-            &-outline {
-                @apply border-green-light text-green-light;
-
-                &:hover {
-                    @apply lg:border-green-light lg:bg-green-light lg:text-white;
-                }
+                @apply lg:border-green-light lg:bg-green-lighter;
             }
         }
 
@@ -252,15 +240,7 @@
             @apply border-orange-light bg-orange-light text-white;
 
             &:hover {
-                @apply lg:border-orange-light lg:bg-orange;
-            }
-
-            &-outline {
-                @apply border-orange-light text-orange-light;
-
-                &:hover {
-                    @apply lg:border-orange-light lg:bg-orange-light lg:text-white;
-                }
+                @apply lg:border-orange-light lg:bg-orange-lighter;
             }
         }
 
@@ -308,7 +288,7 @@
         &-indicator {
             @apply left-1/2 -translate-x-1/2 transform;
 
-            bottom: 23px;
+            bottom: 33px;
         }
 
         &-mouse {
@@ -362,7 +342,7 @@
 // Navigation (Toggle)
 .nav-toggle {
     &-open {
-        .nav-toggle-item {
+        .nav-toggle-bar {
             &:first-child,
             &:last-child {
                 transform-origin: 10px;
@@ -380,9 +360,13 @@
         }
     }
 
-    &-item {
+    &-bar {
         margin-bottom: 5px;
         width: 40px;
         height: 2px;
     }
+}
+
+.test {
+    animation: floating 2.5s infinite ease-in-out;
 }
