Added vertical floating animation

--- a/src/assets/scss/partials/_animations.scss
+++ b/src/assets/scss/partials/_animations.scss
@@ -1,3 +1,17 @@
+@keyframes floating {
+    0% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(15px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
+
 // Scroll down
 @keyframes scrollDown {
     0% {
