Updated .cta-tertiary-outline styles

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -277,7 +277,7 @@
             }
 
             &-outline {
-                @apply border-orange-light text-orange-light;
+                @apply border-orange-light bg-white text-orange-light;
 
                 &:hover {
                     @apply lg:border-orange-light lg:bg-orange-light lg:text-white;
