Updated interior hero section and header

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -82,7 +82,7 @@
     }
 
     h1 {
-        @apply relative inline-block pb-1 font-medium text-blue-light sm-max:text-40 sm-max:leading-tight md:text-48;
+        @apply relative inline-block pb-1 font-medium text-white sm-max:text-40 sm-max:leading-tight md:text-48;
     }
 
     h2,
